WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129989
[iOS Wk2] Can't scroll after going back to page in page cache
https://bugs.webkit.org/show_bug.cgi?id=129989
Summary
[iOS Wk2] Can't scroll after going back to page in page cache
Simon Fraser (smfr)
Reported
2014-03-08 22:52:33 PST
[iOS Wk2] Can't scroll after going back to page in page cache
Attachments
Patch
(11.42 KB, patch)
2014-03-08 22:56 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch (for EWS)
(12.87 KB, patch)
2014-03-08 23:31 PST
,
Simon Fraser (smfr)
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-08 22:56:39 PST
Created
attachment 226251
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-03-08 23:31:59 PST
Created
attachment 226254
[details]
Patch (for EWS)
mitz
Comment 3
2014-03-09 09:26:04 PDT
<
rdar://problem/16217588
>
Simon Fraser (smfr)
Comment 4
2014-03-09 11:08:33 PDT
http://trac.webkit.org/changeset/165352
Simon Fraser (smfr)
Comment 5
2014-03-09 11:09:14 PDT
Comment on
attachment 226254
[details]
Patch (for EWS) Moving Dan's review forward
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug