Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.h
@@ -50,9 +50,8 @@ private:
     virtual bool hasWebView() const override;
     
     virtual void makeRepresentation(WebCore::DocumentLoader*) override;
-    virtual void forceLayout() override;
 #if PLATFORM(IOS)
-    virtual void forceLayoutWithoutRecalculatingStyles() override;
+    virtual bool forceLayoutOnRestoreFromPageCache() override;
 #endif
     virtual void forceLayoutForNonHTML() override;
     
